2014-12-16  Ben Finney  <ben+python@benfinney.id.au>

    * Declare support explicitly for Python 2 only.

2014-12-12  Ben Finney  <ben+python@benfinney.id.au>

    * Document the security impact of the default umask.

2014-12-11  Ben Finney  <ben+debian@benfinney.id.au>

    * Include test suite with source distribution.

2014-12-08  Ben Finney  <ben+python@benfinney.id.au>

    * Migrate to ‘mock’ library for mock objects in tests.
      This will ease the port to Python 3, which has ‘mock’ in the
      standard library.
    * Migrate to ‘testscenarios’ library for unit test scenarios.
    * Migrate to ‘unittest2’ library for back-ported improvements.

2014-11-28  Ben Finney  <ben+python@benfinney.id.au>

    * Add a hacking guide for developers.

2014-11-27  Ben Finney  <ben+python@benfinney.id.au>

    * Use ‘pydoc.splitdoc’ to get package description text.
    * Remove ASCII translation of package description, not needed now the
      docstring is a proper Unicode text value.
    * Move package metadata to ‘daemon/_metadata.py’.
    * Move version string to a plain-text data file, ‘VERSION’.
    * Get version string at run-time from installed distribution.
    * Add unit tests for metadata.

2014-08-05  Ben Finney  <ben+python@benfinney.id.au>

    * Update package homepage to Alioth hosted project page.

2014-08-04  Ben Finney  <ben+python@benfinney.id.au>

    Version 1.6.1 released.

2014-08-01  Ben Finney  <ben+python@benfinney.id.au>

    * Use unambiguous “except FooType as foo” syntax.
      This is to ease the port to Python 3, where the ambiguous comma
      usage is an error.
    * Ensure a ‘basestring’ name bound to the base type for strings.
      This is to allow checks to work on Python 2 and 3.
    * Specify versions of Python supported, as trove classifiers.

2014-05-20  Ben Finney  <ben+python@benfinney.id.au>

    * Update copyright notices.
    * Add editor hints for most files.