@@ -424,8 +424,8 @@ class DaemonContext(object):
             * If the item is ``None``, it is omitted from the return
               set.
 
-            * If the item has a ``fileno()`` method, that method's
-              return value is in the return set.
+            * If the item's ``fileno()`` method returns a value, that
+              value is in the return set.
 
             * Otherwise, the item is in the return set verbatim.
 
@@ -436,14 +436,17 @@ class DaemonContext(object):
         files_preserve.extend(
                 item for item in [self.stdin, self.stdout, self.stderr]
                 if hasattr(item, 'fileno'))
+
         exclude_descriptors = set()
         for item in files_preserve:
             if item is None:
                 continue
-            if hasattr(item, 'fileno'):
-                exclude_descriptors.add(item.fileno())
+            file_descriptor = _get_file_descriptor(item)
+            if file_descriptor is not None:
+                exclude_descriptors.add(file_descriptor)
             else:
                 exclude_descriptors.add(item)
+
         return exclude_descriptors
 
     def _make_signal_handler(self, target):
@@ -477,6 +480,29 @@ class DaemonContext(object):
                 (signal_number, self._make_signal_handler(target))
                 for (signal_number, target) in self.signal_map.items())
         return signal_handler_map
+
+
+def _get_file_descriptor(obj):
+    """ Get the file descriptor, if the object has one.
+
+        :param obj: The object expected to be a file-like object.
+        :return: The file descriptor iff the file supports it;
+            otherwise None.
+
+        The object may be a non-file object. It may also be a
+        file-like object with no support for a file descriptor. In
+        either case, return None.
+
+        """
+    file_descriptor = None
+    if hasattr(obj, 'fileno'):
+        try:
+            file_descriptor = obj.fileno()
+        except ValueError:
+            # The item doesn't support a file descriptor.
+            pass
+
+    return file_descriptor
 
 
 def change_working_directory(directory):
